@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,12 +13,13 @@
 package org.openhab.binding.caddx.internal.handler;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.caddx.internal.CaddxBindingConstants;
 import org.openhab.binding.caddx.internal.CaddxEvent;
 import org.openhab.binding.caddx.internal.CaddxMessage;
+import org.openhab.binding.caddx.internal.CaddxMessageContext;
 import org.openhab.binding.caddx.internal.CaddxMessageType;
 import org.openhab.binding.caddx.internal.CaddxProperty;
 import org.openhab.binding.caddx.internal.action.CaddxZoneActions;
@@ -47,6 +48,23 @@ public class ThingHandlerZone extends CaddxBaseThingHandler {
 
     public ThingHandlerZone(Thing thing) {
         super(thing, CaddxThingType.ZONE);
+    }
+
+    @Override
+    public void initialize() {
+        super.initialize();
+
+        CaddxBridgeHandler bridgeHandler = getCaddxBridgeHandler();
+        if (bridgeHandler == null) {
+            return;
+        }
+
+        String cmd1 = CaddxBindingConstants.ZONE_STATUS_REQUEST;
+        String cmd2 = CaddxBindingConstants.ZONE_NAME_REQUEST;
+        String data = String.format("%d", getZoneNumber() - 1);
+
+        bridgeHandler.sendCommand(CaddxMessageContext.COMMAND, cmd1, data);
+        bridgeHandler.sendCommand(CaddxMessageContext.COMMAND, cmd2, data);
     }
 
     @Override
@@ -99,8 +117,8 @@ public class ThingHandlerZone extends CaddxBaseThingHandler {
         if (bridgeHandler == null) {
             return;
         }
-        bridgeHandler.sendCommand(cmd1, data);
-        bridgeHandler.sendCommand(cmd2, data);
+        bridgeHandler.sendCommand(CaddxMessageContext.COMMAND, cmd1, data);
+        bridgeHandler.sendCommand(CaddxMessageContext.COMMAND, cmd2, data);
     }
 
     @Override
@@ -119,8 +137,7 @@ public class ThingHandlerZone extends CaddxBaseThingHandler {
                     String value = message.getPropertyById(p.getId());
                     channelUID = new ChannelUID(getThing().getUID(), p.getId());
                     updateChannel(channelUID, value);
-
-                    logger.trace("  updateChannel: {} = {}", channelUID, value);
+                    logger.trace("Updating zone channel: {}", channelUID.getAsString());
                 }
             }
         }
@@ -130,7 +147,7 @@ public class ThingHandlerZone extends CaddxBaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(CaddxZoneActions.class);
+        return Set.of(CaddxZoneActions.class);
     }
 
     public void bypass() {
@@ -141,6 +158,6 @@ public class ThingHandlerZone extends CaddxBaseThingHandler {
         if (bridgeHandler == null) {
             return;
         }
-        bridgeHandler.sendCommand(cmd, data);
+        bridgeHandler.sendCommand(CaddxMessageContext.COMMAND, cmd, data);
     }
 }
