@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -272,8 +272,7 @@ public class VehicleHandler extends BaseThingHandler {
             if (api != null) {
                 queryApiAndUpdateChannels(api);
             }
-        } else if (command instanceof OnOffType) {
-            OnOffType onOffCommand = (OnOffType) command;
+        } else if (command instanceof OnOffType onOffCommand) {
             if (ENGINE_START.equals(channelID) && onOffCommand == OnOffType.ON) {
                 actionStart(5);
             } else if (REMOTE_HEATER.equals(channelID) || PRECLIMATIZATION.equals(channelID)) {
@@ -373,6 +372,22 @@ public class VehicleHandler extends BaseThingHandler {
     private State getBatteryValue(String channelId, HvBattery hvBattery) {
         switch (channelId) {
             case BATTERY_LEVEL:
+                /*
+                 * If the car is charging the battery level can be reported as 100% by the API regardless of actual
+                 * charge level, but isn't always. So, if we see that the car is Charging, ChargingPaused, or
+                 * ChargingInterrupted and the reported battery level is 100%, then instead produce UNDEF.
+                 *
+                 * If we see FullyCharged, then we can rely on the value being 100% anyway.
+                 */
+                if (hvBattery.hvBatteryChargeStatusDerived != null
+                        && hvBattery.hvBatteryChargeStatusDerived.toString().startsWith("CablePluggedInCar_Charging")
+                        && hvBattery.hvBatteryLevel != UNDEFINED && hvBattery.hvBatteryLevel == 100) {
+                    return UnDefType.UNDEF;
+                } else {
+                    return hvBattery.hvBatteryLevel != UNDEFINED ? new QuantityType<>(hvBattery.hvBatteryLevel, PERCENT)
+                            : UnDefType.UNDEF;
+                }
+            case BATTERY_LEVEL_RAW:
                 return hvBattery.hvBatteryLevel != UNDEFINED ? new QuantityType<>(hvBattery.hvBatteryLevel, PERCENT)
                         : UnDefType.UNDEF;
             case BATTERY_DISTANCE_TO_EMPTY:
@@ -382,6 +397,27 @@ public class VehicleHandler extends BaseThingHandler {
             case CHARGE_STATUS:
                 return hvBattery.hvBatteryChargeStatusDerived != null ? hvBattery.hvBatteryChargeStatusDerived
                         : UnDefType.UNDEF;
+            case CHARGE_STATUS_CABLE:
+                return hvBattery.hvBatteryChargeStatusDerived != null
+                        ? OnOffType.from(
+                                hvBattery.hvBatteryChargeStatusDerived.toString().startsWith("CablePluggedInCar_"))
+                        : UnDefType.UNDEF;
+            case CHARGE_STATUS_CHARGING:
+                return hvBattery.hvBatteryChargeStatusDerived != null
+                        ? OnOffType.from(hvBattery.hvBatteryChargeStatusDerived.toString().endsWith("_Charging"))
+                        : UnDefType.UNDEF;
+            case CHARGE_STATUS_FULLY_CHARGED:
+                /*
+                 * If the car is charging the battery level can be reported incorrectly by the API, so use the charging
+                 * status instead of checking the level when the car is plugged in.
+                 */
+                if (hvBattery.hvBatteryChargeStatusDerived != null
+                        && hvBattery.hvBatteryChargeStatusDerived.toString().startsWith("CablePluggedInCar_")) {
+                    return OnOffType.from(hvBattery.hvBatteryChargeStatusDerived.toString().endsWith("_FullyCharged"));
+                } else {
+                    return hvBattery.hvBatteryLevel != UNDEFINED ? OnOffType.from(hvBattery.hvBatteryLevel == 100)
+                            : UnDefType.UNDEF;
+                }
             case TIME_TO_BATTERY_FULLY_CHARGED:
                 return hvBattery.timeToHVBatteryFullyCharged != UNDEFINED
                         ? new QuantityType<>(hvBattery.timeToHVBatteryFullyCharged, MINUTE)
@@ -512,7 +548,7 @@ public class VehicleHandler extends BaseThingHandler {
         VocHttpApi api = bridgeHandler.getApi();
         if (api != null) {
             try {
-                PostResponse postResponse = api.postURL(url.toString(), param);
+                PostResponse postResponse = api.postURL(url, param);
                 if (postResponse != null) {
                     pendingActions
                             .add(scheduler.schedule(new ActionResultController(api, postResponse, scheduler, this),
@@ -523,13 +559,12 @@ public class VehicleHandler extends BaseThingHandler {
                 updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, e.getMessage());
             }
         }
-        ;
         pendingActions.removeIf(ScheduledFuture::isDone);
     }
 
     public void actionOpenClose(String action, OnOffType controlState) {
         if (activeOptions.containsKey(action)) {
-            if (!vehicleStatus.getCarLocked().isPresent() || vehicleStatus.getCarLocked().get() != controlState) {
+            if (vehicleStatus.getCarLocked().isEmpty() || vehicleStatus.getCarLocked().get() != controlState) {
                 post(String.format("vehicles/%s/%s", configuration.vin, action), "{}");
             } else {
                 logger.info("The car {} is already {}ed", configuration.vin, action);
@@ -562,6 +597,6 @@ public class VehicleHandler extends BaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(VolvoOnCallActions.class);
+        return List.of(VolvoOnCallActions.class);
     }
 }
